# SRG

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
docs/: CNAME  index.html
src/: build.rs  config.rs  layout.rs  layout_tests.rs  lib.rs  main.rs  themes.rs
src/layouts/classic/: layout.resume  style.css
src/layouts/jake/: layout.resume  style.css
src/layouts/minimal/: layout.resume
src/templates/: minimal.css
tests/: integration_test.rs
