[package]
name = "srg"
version = "20251215.0.2"
edition = "2021"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "Static Resume Generator - converts JOBL files to HTML and PDF"
license = "MIT"
repository = "https://github.com/ducks/srg"
homepage = "https://jobl.dev"
keywords = ["resume", "cv", "generator", "pdf", "html"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
jobl = "20251215.0.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
headless_chrome = "1.0"
